fix: 🐛 double scrollbar issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 @import 'assets/styles/global';
 
+body {
+  overflow: hidden;
+}
 #root {
   overflow: overlay;
   overflow-x: hidden;
